kubernetes/clusters/prod/flux-system/webhook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx-external
  rules:
    - host: flux-receiver.ext.mrv.thebends.org
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
  tls:
    - hosts:
        - flux-receiver.ext.mrv.thebends.org
      secretName: webhook-receiver-tls
